--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -117,6 +117,31 @@
 			margin-bottom: 10px;
 		}
 	}
+
+	&.media-activity {
+
+		.entry-img:before {
+			content: " ";
+			position: absolute;
+			background: rgba(0, 0, 0, 0.35);
+			border-radius: 3px;
+			width: 100%;
+			height: 100%;
+			left: 0;
+			top: 0;
+			z-index: 1;
+			transition: 0.3s all;
+			opacity: 0;
+			visibility: visible;
+		}
+
+		&.is-visible .entry-img:before,
+		&:hover .entry-img:before {
+			opacity: 1;
+			visibility: visible;
+		}
+
+	}
 }
 
 .bb-media-length-4 {
@@ -540,8 +565,8 @@
 .bb-media-check-wrap {
 	position: absolute;
 	transition: 0.3s all;
-	bottom: 15px;
-	right: 15px;
+	top: 25px;
+	left: 15px;
 	color: #fff;
 	width: 20px;
 	height: 20px;
